@@ -18,10 +18,7 @@ package io.gravitee.am.plugins.factor.plugin;
 import io.gravitee.am.factor.api.Factor;
 import io.gravitee.am.plugins.factor.core.FactorDefinition;
 import io.gravitee.am.plugins.factor.core.FactorPluginManager;
-import io.gravitee.plugin.core.api.Plugin;
-import io.gravitee.plugin.core.api.PluginClassLoaderFactory;
-import io.gravitee.plugin.core.api.PluginHandler;
-import io.gravitee.plugin.core.api.PluginType;
+import io.gravitee.plugin.core.api.*;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -31,7 +28,7 @@ import org.springframework.util.Assert;
  * @author Titouan COMPIEGNE (titouan.compiegne at graviteesource.com)
  * @author GraviteeSource Team
  */
-public class FactorPluginHandler implements PluginHandler {
+public class FactorPluginHandler extends AbstractPluginHandler {
 
     private final Logger LOGGER = LoggerFactory.getLogger(FactorPluginHandler.class);
 
@@ -43,20 +40,17 @@ public class FactorPluginHandler implements PluginHandler {
 
     @Override
     public boolean canHandle(Plugin plugin) {
-        return PluginType.FACTOR.name().equalsIgnoreCase(plugin.type());
+        return type().equalsIgnoreCase(plugin.type());
     }
 
     @Override
-    public void handle(Plugin plugin) {
+    protected void handle(Plugin plugin, Class<?> pluginClass) {
         try {
-            ClassLoader classloader = pluginClassLoaderFactory.getOrCreateClassLoader(plugin, this.getClass().getClassLoader());
-
-            final Class<?> authenticatorClass = classloader.loadClass(plugin.clazz());
             LOGGER.info("Register a new factor plugin: {} [{}]", plugin.id(), plugin.clazz());
 
-            Assert.isAssignable(Factor.class, authenticatorClass);
+            Assert.isAssignable(Factor.class, pluginClass);
 
-            Factor factor = createInstance((Class<Factor>) authenticatorClass);
+            var factor = createInstance((Class<Factor>) pluginClass);
 
             pluginManager.register(new FactorDefinition(factor, plugin));
         } catch (Exception iae) {
@@ -64,9 +58,19 @@ public class FactorPluginHandler implements PluginHandler {
         }
     }
 
+    @Override
+    protected String type() {
+        return PluginType.FACTOR.name();
+    }
+
+    @Override
+    protected ClassLoader getClassLoader(Plugin plugin) {
+        return pluginClassLoaderFactory.getOrCreateClassLoader(plugin, this.getClass().getClassLoader());
+    }
+
     private <T> T createInstance(Class<T> clazz) throws Exception {
         try {
-            return clazz.newInstance();
+            return clazz.getDeclaredConstructor().newInstance();
         } catch (InstantiationException | IllegalAccessException ex) {
             LOGGER.error("Unable to instantiate class: {}", clazz.getName(), ex);
             throw ex;
